fix: font-size too small on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -460,7 +460,7 @@ section.contact {
 
 @media (width <= 400px) {
     html {
-        font-size: 4.8px;
+        font-size: 5.5px;
     }
 }
 
